# 5580-a6-anomaly-detection-nsp

./: .gitignore  PROJECT_SUMMARY.md  README.md  create_forecast_results.py  pyproject.toml  run_lstm_prep.py  run_lstm_train_torch.py  run_model_comparison.py  run_prophet_eval.py
data/: data.md
output/: feature_importance_results.csv  forecast_metrics_all_regions.csv  global_method_summary.csv  lstm_metrics_summary.csv  lstm_model_checkpoint.keras  lstm_model_halifax_torch.pt  lstm_model_torch_checkpoint.pt  lstm_scaler.pkl  model_results.csv  output.md  prophet_forecasts_all_regions.csv  prophet_metrics_summary.csv  region_method_summary.csv
report/: includes.tex  main.tex  report.md
report/appendices/: appendix_a.tex
report/chapters/: 1_introduction.tex  2_methodology.tex  3_modeling.tex  4_results.tex  5_summary.tex  6_appendix.tex
report/tables/: table_forecast_metrics.tex  table_global_method_summary.tex  table_region_method_summary.tex
src/: NOTEBOOK_WALKTHROUGH.md  anomaly_detection.ipynb  anomaly_detection.py  eda.ipynb  eda.md  eda_merged.ipynb  feature_importance_results.csv  forecasting.ipynb  forecasting_backup.ipynb
tools/: anomaly_methods.py  build_processed_dataset.py  build_processed_preview.py  check_dataset_info.py  dataset_summary.py  forecast_with_regressors.py  run_lstm_runner.py  run_zscore_anomaly.py  run_zscore_quick.py  run_zscore_runner.py  train_multivariate_lstm.py  zscore_stream.py
