[project]
name = "a6-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deptry>=0.25.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "ty>=0.0.22",
    "xgboost>=3.2.0",
]
